--- a/services/distribution/src/main/resources/master-config/app-version-config.yaml
+++ b/services/distribution/src/main/resources/master-config/app-version-config.yaml
@@ -3,7 +3,7 @@
 #
 # The latest version must not be lower than the min version.
 #
-# Change this file with caution!
+# Change this file with caution!!
 
 ios:
   latest:
