Minimize logging and set up stop watches

--- a/services/distribution/src/main/resources/application-dev.yaml
+++ b/services/distribution/src/main/resources/application-dev.yaml
@@ -2,7 +2,6 @@
 logging:
   level:
     org:
-      springframework:
-        web: DEBUG
+      springframework: off
     app:
       coronawarn: DEBUG
