--- a/common/persistence/src/test/resources/application.yaml
+++ b/common/persistence/src/test/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
       replace: none
   flyway:
     clean-on-validation-error: true
-    enabled: false
+    enabled: true
     locations: classpath:/db/migration
   datasource:
     url: jdbc:h2:mem:test;MODE=PostgreSQL
