--- a/common/persistence/src/test/resources/application.yaml
+++ b/common/persistence/src/test/resources/application.yaml
@@ -6,7 +6,7 @@ spring:
   flyway:
     clean-on-validation-error: true
     enabled: true
-    locations: classpath:/db/migration
+    locations: classpath:/db/specific/h2
   datasource:
     url: jdbc:h2:mem:test;MODE=PostgreSQL
     driverClassName: org.h2.Driver
