-inital commit adding basic auth

--- a/services/submission/src/main/resources/application.yaml
+++ b/services/submission/src/main/resources/application.yaml
@@ -41,6 +41,12 @@ services:
         trust-store-password: ${SSL_VERIFICATION_TRUSTSTORE_PASSWORD}
 
 spring:
+  security:
+    user:
+      name: admin
+      password: admin
+      roles:
+        - ENDPOINT_ADMIN
   lifecycle:
     # keep in sync or lower than the kubernetes setting 'terminationGracePeriodSeconds'
     # 5s +5s Feign client + 20s DB timeout
@@ -69,6 +75,9 @@ management:
     prometheus:
       enabled: true
     health:
+      show-details: when-authorized
+      roles:
+        - ENDPOINT_ADMIN
       group:
         readiness:
           include: db, verificationService
