-actuator basic auth configuration setup

--- a/.env
+++ b/.env
@@ -25,3 +25,7 @@ OBJECTSTORE_SECRETKEY=verySecretKey1
 
 # Docker Compose Secrets settings
 SECRET_PRIVATE=file:/secrets/private.pem
+
+# Docker Compose Actuator Credentials
+ACTUATOR_USER_NAME=local_actuator_username
+ACTUATOR_USER_PASSWORD=local_actuator_password
