--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,8 @@ services:
       POSTGRESQL_PASSWORD_FLYWAY: ${POSTGRES_FLYWAY_PASSWORD}
       POSTGRESQL_USER_FLYWAY: ${POSTGRES_FLYWAY_USER}
       VERIFICATION_BASE_URL: http://verification-fake:8004
+      ACTUATOR_USER_NAME: ${ACTUATOR_USER_NAME}
+      ACTUATOR_USER_PASSWORD: ${ACTUATOR_USER_PASSWORD}
   distribution:
     build:
       context: ./
