--- a/services/distribution/Dockerfile
+++ b/services/distribution/Dockerfile
@@ -26,10 +26,13 @@ RUN mkdir -p /usr/sap/distribution-service
 RUN ${WORK_DIR}/mvnw --batch-mode -DskipTests=true --file ${WORK_DIR}/pom.xml ${MAVEN_ARGS} clean install
 RUN cp ${WORK_DIR}/services/distribution/target/distribution-*.jar /usr/sap/distribution-service/distribution.jar
 RUN cp ${WORK_DIR}/scripts/DpkgHelper.java /DpkgHelper.java
+RUN cp ${WORK_DIR}/services/distribution/src/test/resources/keys/private.pem /private.pem
 
 FROM gcr.io/distroless/java:11
 COPY --from=build /DpkgHelper.java .
+COPY --from=build /private.pem .
 COPY --from=build /usr/sap/distribution-service/distribution.jar .
+
 RUN ["java", "DpkgHelper.java"]
 USER 65534:65534
 ENTRYPOINT ["/usr/bin/java", "-Djdk.tls.namedGroups=\"secp256r1,secp384r1,brainpoolP256r1,brainpoolP384r1,brainpoolP512r1,ffdhe2048,ffdhe3072,ffdhe4096\"", "-jar"]
