--- a/services/submission/src/main/resources/bootstrap.yaml
+++ b/services/submission/src/main/resources/bootstrap.yaml
@@ -3,3 +3,10 @@ spring:
   cloud:
     vault:
       enabled: false
+
+cloud:
+  aws:
+    region:
+      static: eu-central-1
+    stack:
+      auto: false
