CBA-179: changed key id and bundle id

--- a/services/distribution/src/main/resources/application-signature-prod.yaml
+++ b/services/distribution/src/main/resources/application-signature-prod.yaml
@@ -2,4 +2,4 @@
 services:
   distribution:
     signature:
-      app-bundle-id: de.rki.coronawarnapp
+      app-bundle-id: be.sciensano.coronalertbe
