--- a/services/distribution/src/main/resources/application-signature-dev.yaml
+++ b/services/distribution/src/main/resources/application-signature-dev.yaml
@@ -2,4 +2,4 @@
 services:
   distribution:
     signature:
-      app-bundle-id: de.rki.coronawarnapp-dev
+      app-bundle-id: be.sciensano.coronalertbe
