CBA-179: TEK country DE->BE conversion

--- a/services/distribution/src/main/resources/application.yaml
+++ b/services/distribution/src/main/resources/application.yaml
@@ -49,7 +49,7 @@ services:
       version-path: version
       version-v1: v1
       country-path: country
-      country-germany: DE
+      country-belgium: BE
       date-path: date
       hour-path: hour
       diagnosis-keys-path: diagnosis-keys
