--- a/.github/workflows/license-analysis.yml
+++ b/.github/workflows/license-analysis.yml
@@ -3,7 +3,16 @@ name: "CI"
 on:
   pull_request:
     branches:
-    - master
+      - master
+      - development
+    paths:
+      - '**/Dockerfile'
+  push:
+    branches:
+      - master
+      - development
+    paths:
+      - '**/Dockerfile'
 
 jobs:
   fileheader:
