--- a/.github/workflows/ci-develop-pr.yml
+++ b/.github/workflows/ci-develop-pr.yml
@@ -51,28 +51,30 @@ jobs:
           retries=0
           echo "Waiting for clair daemon to start"
           while( ! wget -T 10 -q -O /dev/null http://localhost:6060/v1/namespaces ) ; do sleep 1 ; echo -n "." ; if [ $retries -eq 10 ] ; then echo " Timeout, aborting." ; exit 1 ; fi ; retries=$(($retries+1)) ; done
-          ./clair-scanner -c http://localhost:6060 --ip $(hostname -i) -r gl-container-scanning-report.json -l clair.log -w clair-whitelist.yml  ${ECR_REPO_HOST}/${ECR_REPO_NAME}:latest || true
+          ./clair-scanner -w whitelist.yml -c http://localhost:6060 --ip $(hostname -i) -r gl-container-scanning-report.json -l clair.log -w clair-whitelist.yml  ${ECR_REPO_HOST}/${ECR_REPO_NAME}:latest
           cat gl-container-scanning-report.json
         env:
           ECR_REPO_HOST: ${{ secrets.ECR_REPO_HOST }}
           ECR_REPO_NAME: ${{ secrets.ECR_REPO_NAME_DISTRIBUTION }}
       - uses: actions/upload-artifact@v1
+        if: ${{ always }}
         with:
           name: clair-result.json
           path: gl-container-scanning-report.json
-#      - uses: actions/upload-artifact@v1
-#        with:
-#          name: clair-log
-#          path: clair.log
-#      - name: docker push ecr
-#        run: |
-#          sudo apt-get install --yes awscli
-#          aws ecr get-login-password | docker login --username AWS --password-stdin ${ECR_REPO_HOST}
-#          docker push ${ECR_REPO_HOST}/${ECR_REPO_NAME}:develop
-#          docker push ${ECR_REPO_HOST}/${ECR_REPO_NAME}:latest
-#        env:
-#          ECR_REPO_HOST: ${{ secrets.ECR_REPO_HOST }}
-#          ECR_REPO_NAME: ${{ secrets.ECR_REPO_NAME_DISTRIBUTION }}
-#          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_PUSHECR }}
-#          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_PUSHECR }}
+      - uses: actions/upload-artifact@v1
+        if: ${{ always }}
+        with:
+          name: clair-log
+          path: clair.log
+      - name: docker push ecr
+        run: |
+          sudo apt-get install --yes awscli
+          aws ecr get-login-password | docker login --username AWS --password-stdin ${ECR_REPO_HOST}
+          docker push ${ECR_REPO_HOST}/${ECR_REPO_NAME}:develop
+          docker push ${ECR_REPO_HOST}/${ECR_REPO_NAME}:latest
+        env:
+          ECR_REPO_HOST: ${{ secrets.ECR_REPO_HOST }}
+          ECR_REPO_NAME: ${{ secrets.ECR_REPO_NAME_DISTRIBUTION }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_PUSHECR }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_PUSHECR }}
 
