--- a/.github/workflows/ci-develop-pr.yml
+++ b/.github/workflows/ci-develop-pr.yml
@@ -116,4 +116,5 @@ jobs:
           ECR_REPO_NAME: ${{ secrets.ECR_REPO_NAME_DISTRIBUTION }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID_PUSHECR }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY_PUSHECR }}
+          AWS_DEFAULT_REGION: eu-central-1
 
