CBA-155: Test deploy

--- a/.github/workflows/ci-develop-pr.yml
+++ b/.github/workflows/ci-develop-pr.yml
@@ -42,12 +42,12 @@ jobs:
 #        env:
 #          ECR_REPO_HOST: ${{ secrets.ECR_REPO_HOST }}
 #          ECR_REPO_NAME: ${{ secrets.ECR_REPO_NAME_DISTRIBUTION }}
-      - name: anchore inline scan JSON results
-        if: ${{ always() }}
-        run: for j in `ls ./anchore-reports/*.json`; do echo "---- ${j} ----"; cat ${j}; echo; done
-      - name: anchore action SARIF report
-        if: ${{ always() }}
-        run: cat results.sarif
+#      - name: anchore inline scan JSON results
+#        if: ${{ always() }}
+#        run: for j in `ls ./anchore-reports/*.json`; do echo "---- ${j} ----"; cat ${j}; echo; done
+#      - name: anchore action SARIF report
+#        if: ${{ always() }}
+#        run: cat results.sarif
       - name: docker push ecr
         run: |
           sudo apt-get install --yes awscli
