CBA-155: CICD rewrite for dev environment (for now)

--- a/.github/workflows/ci-develop-pr.yml
+++ b/.github/workflows/ci-develop-pr.yml
@@ -1,11 +1,8 @@
 name: "PR on development branch"
 on:
-  pull_request:
-    branches:
-      - development
   push:
-    branches:
-      - feature/CBA-155-cicd
+    branches-ignore:
+      - '**'
 
 jobs:
   distribution:
