--- a/.github/workflows/hadolint-analysis.yml
+++ b/.github/workflows/hadolint-analysis.yml
@@ -1,18 +1,9 @@
 name: "Dockerfile-Linting"
 
 on:
-  pull_request:
-    branches: 
-      - master
-      - development
-    paths:
-      - '**/Dockerfile'
   push:
-    branches:
-      - master
-      - development
-    paths:
-      - '**/Dockerfile'
+    branches-ignore:
+      - '**'
 
 jobs:
   distribution:
