--- a/.github/workflows/license-analysis.yml
+++ b/.github/workflows/license-analysis.yml
@@ -1,18 +1,9 @@
 name: "CI"
 
 on:
-  pull_request:
-    branches:
-      - master
-      - development
-    paths:
-      - '**/Dockerfile'
   push:
-    branches:
-      - master
-      - development
-    paths:
-      - '**/Dockerfile'
+    branches-ignore:
+      - '**'
 
 jobs:
   fileheader:
