CBA-155: Fix path to Dockerfile

--- a/.github/workflows/ci-develop.yml
+++ b/.github/workflows/ci-develop.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Lint Dockerfile
         run: |
           docker pull hadolint/hadolint
-          docker run --rm --interactive hadolint/hadolint < ./Dockerfile
+          docker run --rm --interactive hadolint/hadolint < ./services/submission/Dockerfile
       - name: docker build
         run: |
           docker build --pull --rm \
